API documentation (swagger)

--- a/pkg/http/rest/validation/schema/add_comment.yaml
+++ b/pkg/http/rest/validation/schema/add_comment.yaml
@@ -9,6 +9,10 @@ properties:
   text:
     type: string
     pattern: \S
+  external_id:
+    description: ID in external system
+    type: string
+    pattern: \S
 
 additionalProperties: false
 required:
